# SmokeyBedrockParser

./: .gitignore  .gitmodules  CMakeLists.txt  NBT.cpp  README.md  Source.cpp  Test.cpp  compile.bat  nbt.h  test.cpp
SmokeyBedrockParser-CLI/: CMakeLists.txt
SmokeyBedrockParser-CLI/src/: SmokeyBedrockParser.cpp
SmokeyBedrockParser-Core/: CMakeLists.txt
SmokeyBedrockParser-Core/include/: nbt.h
SmokeyBedrockParser-Core/include/SmokeyBedrockParser-Core/: loader.h
SmokeyBedrockParser-Core/include/SmokeyBedrockParser-Core/minecraft/: block.h
SmokeyBedrockParser-Core/include/SmokeyBedrockParser-Core/world/: chunk.h  dimension.h
SmokeyBedrockParser-Core/src/: logger.cpp  nbt.cpp  util.cpp
SmokeyBedrockParser-Core/src/world/: chunk.cpp
SmokeyBedrockParser-GUI/: CMakeLists.txt
SmokeyBedrockParser-GUI/data/: blocks.json
SmokeyBedrockParser-GUI/include/: loader.h
SmokeyBedrockParser-GUI/include/glad/: glad.h
SmokeyBedrockParser-GUI/include/renderer/: renderer.h  shader.h
SmokeyBedrockParser-GUI/src/: SmokeyBedrockParser.cpp  loader.cpp
data/: blocks.json  camera.fragment  camera.vertex  cameravs.txt
include/: loader.h  logger.h  nbt.h  shader.h  util.h
include/minecraft/: block.h
include/renderer/: index_buffer.h  shader.h  vertex_buffer.h
include/world/: chunk.h  dimension.h  world.h
patches/: leveldb.patch
src/: SmokeyBedrockParser.cpp  glad.c  loader.cpp  logger.cpp  nbt.cpp
src/minecraft/: block.cpp
src/renderer/: index_buffer.cpp  renderer.cpp  vertex_buffer.cpp
src/world/: chunk.cpp  world.cpp
